EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==09/11/2010==
Vanicae: Fix for guild management window updates
wheeljack: Fix for missing tradeskill favorites
Vanicae: Tribute Focus, SE_DivineSave, SE_Flurry, SE_Accuracy
wheeljack: Fix for losing items in world containers
pfyon: quest::createBot()
Derision: None potions that are potion belt enabled (mod rods etc) should now work from the potion belt when they are inside a bag.
Derision: Recast timers should now be honoured for clicky items with a single charge (e.g. Modulating Rod).
gaeorn: more fixes for newer gcc/glib

==09/08/2010==
gaeorn: fixes for new stricter version of gcc/glib

==09/08/2010==
JJ: ChannelMessageSend in Client now cleans the "from" name to allow NPCs to be used as the message sender.

==09/06/2010==
Trevius: Added to Perl Mob: SetSlotTint(material_slot, red_tint, green_tint, blue_tint).
Trevius: Added to Perl Mob: WearChange(material_slot, texture, color).
Trevius: Added to Perl Mob: GetArmorTint(material_slot).
Trevius: Changed EVENT_COMBAT to now export the normal client variables when combat state changes to 1.

==08/28/2010==
Derision: Fixed potential buffer overrun in item_struct. NOTE: Linux users may have to increase shmmax.
Trevius: Added to Perl Mob: SetGlobal(varname, newvalue, options, duration, other=NULL).
Trevius: Added to Perl Mob: TarGlobal(varname, value, duration, npcid, charid, zoneid).
Trevius: Added to Perl Mob: DelGlobal(varname).

==08/26/2010==
Trevius: Added new Perl Mob quest object GetItemStat(itemid, stat).
Trevius: Added new Perl Client quest object NPCSpawn(target_npc, option, respawntime=1200) to do create, add, update, remove, and deletes just like #npcspawn.
Trevius: Fixed a potential crash while augmenting items.
Trevius: Fixed a crash caused by using tradeskill container objects created with the CreateGroundObjectFromModel() quest command.