@@ -496,3 +496,4 @@ N(OP_DzMemberList),
 N(OP_DzCompass),
 N(OP_DzChooseZone),
 N(OP_BuffCreate),
+N(OP_GuildStatus),
