@@ -137,6 +137,7 @@ OP_GuildUpdateURLAndChannel=0x5422
 OP_GuildMemberLevelUpdate=0x0000	# 
 OP_ZoneGuildList=0x0000				# 
 OP_GetGuildsList=0x0000				# 
+OP_GuildStatus=0x5479
 # OP_GuildManageRemove=0x0000		# 
 # OP_GuildManageAdd=0x0000			# 
 # OP_GuildManageStatus=0x0000		# 
@@ -263,6 +264,7 @@ OP_WeaponUnequip2=0x19a8			# C
 OP_ApplyPoison=0x405b				# C
 OP_Save=0x5c85						# C
 OP_TestBuff=0x5fc7					# C
+OP_DestructableRelated=0x5ea1
 OP_CustomTitles=0x1b26				# C
 OP_Split=0x53f9						# C
 OP_YellForHelp=0x6f79				# C
@@ -498,6 +500,15 @@ OP_TaskHistoryRequest=0x29d7		# C
 OP_TaskHistoryReply=0x3d2a			# C
 OP_CancelTask=0x726b				# C
 OP_DeclineAllTasks=0x0000			# 
+OP_Shroud=0x6d1f
+OP_ShroudRemove=0x17f6
+OP_ShroudUnknown1=0x169a
+OP_ShroudUnknown2=0x4292
+OP_ShroudClearAA=0x3bef
+OP_ShroudSelectionWindow=0x4d79
+OP_ShroudRequestStats=0x28ce
+OP_ShroudRespondStats=0x33f2
+OP_ShroudSelect=0x194f
 
 # Title opcodes
 OP_NewTitlesAvailable=0x4399		# C
