@@ -464,7 +464,6 @@ OP_LDoNOpen=0x4b92			#Xinu 03/19/09
 
 #Task packets
 OP_TaskActivityComplete=0x7338		#
-OP_TaskMemberList=0x0ad6		#Xinu 03/19/09
 OP_OpenNewTasksWindow=0x17C3		#
 OP_AvaliableTask=0x5d1d			#Xinu 03/19/09
 OP_AcceptNewTask=0x66A8			#
@@ -472,6 +471,15 @@ OP_TaskHistoryRequest=0x3035		#
 OP_TaskHistoryReply=0x3A60		#
 OP_CancelTask=0x4db6			#Xinu or 0x2c8c or 0x4db6
 OP_DeclineAllTasks=0x0000		#not sure, 12 bytes
+OP_TaskMemberList=0x3713
+OP_TaskMemberInvite=0x3cde
+OP_TaskMemberInviteResponse=0x6cab
+OP_TaskMemberChange=0x354a
+OP_TaskMakeLeader=0x5050
+OP_TaskAddPlayer=0x5d1d
+OP_TaskRemovePlayer=0x516f
+OP_TaskPlayerList=0x0ad6
+OP_TaskQuit=0x2c8c
 
 #Title opcodes
 OP_NewTitlesAvailable=0x179c		#
