@@ -444,7 +444,7 @@ OP_TaskActivityComplete=0x54eb
 OP_CompletedTasks=0x76a2			# ShowEQ 10/27/05
 OP_TaskDescription=0x5ef7			# ShowEQ 10/27/05
 OP_TaskActivity=0x682d			# ShowEQ 10/27/05
-OP_TaskMemberList=0x0000	#not sure
+OP_TaskMemberList=0x722f	#not sure
 OP_OpenNewTasksWindow=0x5e7c	#combined with OP_AvaliableTask I think
 OP_AvaliableTask=0x0000
 OP_AcceptNewTask=0x207f
@@ -452,6 +452,14 @@ OP_TaskHistoryRequest=0x5df4
 OP_TaskHistoryReply=0x397d
 OP_CancelTask=0x3ba8
 OP_DeclineAllTasks=0x0000	#not sure, 12 bytes
+OP_TaskMemberInvite=0x79b4
+OP_TaskMemberInviteResponse=0x0358
+OP_TaskMemberChange=0x5886
+OP_TaskMakeLeader=0x1b25
+OP_TaskAddPlayer=0x6bc4
+OP_TaskRemovePlayer=0x37b9
+OP_TaskPlayerList=0x3961
+OP_TaskQuit=0x35dd
 #task complete related: 0x0000 (24 bytes), 0x0000 (8 bytes), 0x0000 (4 bytes)
 
 
