@@ -258,3 +258,4 @@
 	void Handle_OP_HideCorpse(const EQApplicationPacket *app);
 	void Handle_OP_TradeBusy(const EQApplicationPacket *app);
 	void Handle_OP_GuildUpdateURLAndChannel(const EQApplicationPacket *app);
+	void Handle_OP_GuildStatus(const EQApplicationPacket *app);
